--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -1,5 +1,5 @@
 ---
-title: " "
+title: "Welcome to Parasite Ecology!"
 output:
   html_document:
     toc: true
@@ -9,7 +9,7 @@ output:
 
 <br>
 
-# Welcome to Parasite Ecology
+#
 
 **You're in for a wild ride!** Parasites are all around you, every day, hidden and unnoticed but ubiquitous.  And yet it is entirely possible (even likely!) that you've never before encountered parasites in your biology education.  This makes for an explosive combination: you're about to learn about a secret world hidden under everything that is familiar to you, a world of organisms with adaptations so weird, so grotesque, so elaborate, that their existence defies belief. But I assure you - parasites are very, very real.
 
