--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -28,19 +28,19 @@ Can't wait to dive in!
 Associate Professor, School of Aquatic & Fishery Sciences  
 FISH 318B<br>
 [chelwood@uw.edu](mailto:chelwood@uw.edu)<br>
-**Office hours:** Mondays 1:30-2:30pm in my office (FISH 318B)
+**Office hours:** Mondays 1:30-2:30pm in FISH 318B
 
 [**Gabby Commisso**](https://chelsealwood.com/people/)  
 Teaching Assistant, School of Aquatic & Fishery Sciences  
 FISH 262B<br>
 [gcom@uw.edu](mailto:gcom@uw.edu)<br>
-**Office hours:** XXX
+**Office hours:** Wednesdays, 10:00-11:00am in FISH 262B
 
 [**Connor Whalen**](https://chelsealwood.com/people/)  
 Teaching Assistant, School of Aquatic & Fishery Sciences  
 FISH 262B<br>
 [cjwhalen@uw.edu](mailto:cjwhalen@uw.edu)<br>
-**Office hours:** XXX
+**Office hours:** Thursdays 3:00-4:00pm in FISH 262B
 
 <br>
 
