--- a/lectures.Rmd
+++ b/lectures.Rmd
@@ -4,16 +4,63 @@ output: html_document
 ---
 
 ```{r generate_calendar, eval = FALSE, echo=FALSE}
+## load library
+library(toastui)
+
 ## data frame with dates & topics
 cal_data<-read.csv("calendar_data.csv")
 
 ## display calendar
-calendar(cal_data,navigation = T, defaultDate=as.Date("2025-09-24")) %>%
+fish406_cal<-calendar(cal_data,navigation = T, defaultDate=as.Date("2025-09-24")) %>%
 cal_month_options(
 startDayOfWeek=0,
 narrowWeekend=T
 ) %>%
 cal_props(cal_data)
+
+<link rel="stylesheet" type="text/css" href="https://uicdn.toast.com/tui-calendar/latest/tui-calendar.css" />
+
+<!-- If you use the default popups, use this. -->
+<link rel="stylesheet" type="text/css" href="https://uicdn.toast.com/tui.date-picker/latest/tui-date-picker.css" />
+<link rel="stylesheet" type="text/css" href="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.css" />
+
+<script src="https://uicdn.toast.com/tui.code-snippet/latest/tui-code-snippet.js"></script>
+<script src="https://uicdn.toast.com/tui.dom/v3.0.0/tui-dom.js"></script>
+<script src="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.min.js"></script>
+<script src="https://uicdn.toast.com/tui.date-picker/latest/tui-date-picker.min.js"></script>
+<script src="https://uicdn.toast.com/tui-calendar/latest/tui-calendar.js"></script>  
+<script src="https://uicdn.toast.com/tui.code-snippet/latest/tui-code-snippet.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chance/1.0.13/chance.min.js"></script>
+
+      <script type="text/javascript">
+    var cal, resizeThrottled;
+    var useCreationPopup = true;
+    var useDetailPopup = true;
+    var datePicker, selectedCalendar;
+
+    cal = new tui.Calendar('fish406_cal', {
+    defaultView: 'week',
+    useCreationPopup: useCreationPopup,
+    useDetailPopup: useDetailPopup,
+    calendars: CalendarList,
+    template: {
+        milestone: function(model) {
+            return '<span class="calendar-font-icon ic-milestone-b"></span> <span style="background-color: ' + model.bgColor + '">' + model.title + '</span>';
+        },
+        allday: function(schedule) {
+            return getTimeTemplate(schedule, true);
+        },
+        time: function(schedule) {
+            return getTimeTemplate(schedule, false);
+        }
+    }
+});
+</script>
+
 ```
 
 <br>
