--- a/homework.Rmd
+++ b/homework.Rmd
@@ -1,153 +1,201 @@
 ---
-title: "Homework"
-output: html_document
+title: "Course content"
+output:
+  html_document:
+    toc: true
+    toc_float: true
+    toc_depth: 3
 ---
 
-```{r child = "_timeline.Rmd", include=FALSE}
+<br>
+
+#
+
+Make sure to read, watch, or listen to all content on each tab before the corresponding class or lab!
+
+<br>
+
+
+# Classes
+
+### Class 1
+
+### Class 2
+
+### Class 3
+
+### Class 4
+
+### Class 5
+
+### Class 6
+
+### Class 7
+
+### Class 8
+
+### Class 9
+
+### Class 10
+
+### Class 11
+
+### Class 12
+
+### Class 13
+
+### Class 14
+
+### Class 15
+
+### Class 16
+
+### Class 17
+
+### Class 18
+
+### Class 19
+
+### Class 20
+
+### Class 21
+
+### Class 22
+
+### Class 23
+
+### Class 24
+
+### Class 25
+
+### Class 26
+
+# Labs
+
+### Lab 1
+
+**It'll be barely visible at first: a twitch.** A white mouse will be laid on its back on your desk, pinned to a wax tray, its organs exposed.Itself freshly dead, the mouse’s schistosome parasites will still be alive. Just within the hepatic portal vein and visible across the thin wall of the vessel, paired male and female worms will thrash, sensing their host’s demise.When I see this, I'm always awestruck at the devastation wreaked on the liver by wayward *Schistosoma mansoni* eggs, at the organ’s distention, its mounds of granulomas. I'm also awestruck at the thought that such eggs are – at this very moment – navigating the same winding route through human bodies, causing the same pathology.
+
+[https://img.youtube.com/vi/ffsV86ytjSM/0.jpg](https://www.youtube.com/watch?v=ffsV86ytjSM)
+
+{% include youtube.html id="ffsV86ytjSM" %}
 ```
 
-```{r child = "_list_of_hw.Rmd", include=FALSE}
-```
+This year, I'll kick off our labs by throwing you into the deep end of the parasitology pool. In our first lab, you will get to see **live schistosome adults in mice and hatch their eggs into miracidia.** You'll also get to see **another species of trematode in its snail intermediate host**. For this and all future labs, you'll be responsible for keeping a laboratory notebook of your observations. Make sure to finish reading the content on Lab 1 before your lab section meets!
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-library(magrittr)
-library(kableExtra)
-```
+*Adapted from Kuris, Whitney, and McKenzie Parasitology Lab Exercises, UC Santa Barbara*
 
-All homework assignments should be submitted via Canvas.
+*Note that Schistosoma-infected mice were provided by the NIAID Schistosomiasis Resource Center for distribution through BEI Resources, NIH-NIAID Contract HHSN272201000005I (NIH: Schistosoma mansoni, Strain NMRI, Exposed Swiss Webster Mice, NR-21963)*
 
-```{r week_hw, include = FALSE}
-## empty list for labs
-week_hw <- vector("list", 9)
-names(week_hw) <- paste0("L", seq(9))
-## hw topics
-week_hw$L1 <- focal_paper
-week_hw$L2 <- message_box
-week_hw$L3 <- holiday_1
-week_hw$L4 <- proposal_draft
-week_hw$L5 <- cover_letter
-week_hw$L6 <- review_draft
-week_hw$L7 <- holiday_2
-week_hw$L8 <- presentation
-week_hw$L9 <- proposal_final
-# week_hw$L10
-```
+    Phylum Platyhelminthes
+            Class Trematoda
+                  Subclass Digenea
+                        Order Strigeiformes
+                            Family Schistosomatidae
+                                  *Schistosoma mansoni*
+                                  *Schistosoma haematobium*
+                                  *Schistosoma japonicum*
+                        Order Plagiorchiida
+                            Family Heterophyidae
+                                  *Cercaria batillariae*
 
-```{r topics, include = FALSE}
-topics <- lapply(week_hw, function(x) { if(is.list(x)) {c(x$topics)} else {""} })
-## topics formatted for html
-topics_html <- sapply(lapply(topics, paste, "<br>", collapse = ""), c)
-names(topics_html) <- NULL
-```
+  
+#### Phylum Platyhelminthes
 
-```{r assignment_links, include = FALSE}
-assignment_links <- lapply(week_hw, function(x) { if(is.list(x)) {c(x$html)} else {""} })
-assignment_links_html <- sapply(lapply(assignment_links, function(x) {
-  if(length(x)>1) {
-    tmp1 <- paste0("[",
-                   as.character(fontawesome::fa("file-alt", height = "2em", fill = "#2fa4e7")),
-                   " (", 1:length(x), ")](")
-    } else {
-      tmp1 <- paste0("[",
-                     as.character(fontawesome::fa("file-alt", height = "2em", fill = "#2fa4e7")),
-                     "](")
-      }
-  tmp2 <- ")"
-  tmp <- paste0(tmp1, x, tmp2)
-  tmp[x==""] <- ""
-  tmp <- paste(tmp, collapse="<br>"); tmp}), c)
-```
+The platyhelminths are commonly referred to as "flatworms", since they are typically dorsoventrally flattened. This large and diverse phylum is comprised of four major classes (Turbellaria, Trematoda, Monogenea, and Cestoidea) that we will study in more depth throughout the next few labs. The hypothetical relationships of these major groups are shown in the cladogram below, which traces the common ancestry among the groups. The platyhelminths as a group provide an exciting introduction to parasitology because one can trace the evolution and specialization for parasitism throughout the group. While studying the flatworms, pay particular attention to the reproductive anatomy, reproductive capacity, adaptations for a parasitic life style, and transmission stages.
 
-```{r template_links, include = FALSE}
-template_links <- lapply(week_hw, function(x) { if(is.list(x)) {c(x$rmd)} else {""} })
-template_links_html <- sapply(lapply(template_links, function(x) {
-  if(length(x)>1) {
-    tmp1 <- paste0("[",
-                   as.character(fontawesome::fa("file-code", height = "2em", fill = "#2fa4e7")),
-                   " (", 1:length(x), ")](")
-    } else {
-      tmp1 <- paste0("[",
-                     as.character(fontawesome::fa("file-code", height = "2em", fill = "#2fa4e7")),
-                     "](")
-      }
-  tmp2 <- ")"
-  tmp <- paste0(tmp1, x, tmp2)
-  tmp[x==""] <- ""
-  tmp <- paste(tmp, collapse="<br>"); tmp}), c)
-```
+<p align="center">
+    <img src="images/flatworm_cladogram.jpg">
+</p>
 
-```{r data_links, include = FALSE}
-data_links <- lapply(week_hw, function(x) { if(is.list(x)) {x$data} else {""} })
-data_links_html <- sapply(lapply(data_links, function(x) {
-  if(length(x)>1) {
-    tmp1 <- paste0("[",
-                   as.character(fontawesome::fa("table", height = "2em", fill = "#2fa4e7")),
-                   " (", 1:length(x), ")](")
-    } else {
-      tmp1 <- paste0("[",
-                     as.character(fontawesome::fa("table", height = "2em", fill = "#2fa4e7")),
-                     "](")
-      }
-  tmp2 <- ")"
-  tmp <- paste0(tmp1, x, tmp2)
-  tmp[x==""] <- ""
-  tmp <- paste(tmp, collapse="<br>"); tmp}), c)
-```
+#### The trematode life cycle 
 
-```{r key_links, include = FALSE}
-key_links <- lapply(week_hw, function(x) { if(is.list(x)) {c(x$key)} else {""} })
-key_links_html <- sapply(lapply(key_links, function(x) {
-  if(length(x)>1) {
-    tmp1 <- paste0("[",
-                   as.character(fontawesome::fa("key", height = "2em", fill = "#2fa4e7")),
-                   " (", 1:length(x), ")](")
-    } else {
-      tmp1 <- paste0("[",
-                     as.character(fontawesome::fa("key", height = "2em", fill = "#2fa4e7")),
-                     "](")
-      }
-  tmp2 <- ")"
-  tmp <- paste(tmp1, x, tmp2)
-  tmp[x==""] <- ""
-  tmp <- paste(tmp, collapse = " ")
-  tmp}), c)
-names(key_links_html) <- NULL
-```
+The digenetic trematodes comprise a truly marvelous array of families, genera, and species. Classification of the Digenea is determined on the basis of the size, shape, and placement of suckers, arrangement of flame cells, and especially on details of the reproductive system. The Digenea are one of the largest platyhelminth groups, with an estimated 40,000 described species in at least 125 families. Taxonomy in this large group is still in a dynamic state.
 
-```{r percents, include = FALSE}
-percents <- lapply(week_hw, function(x) { if(is.list(x)) {c(x$percent)} else {""} })
-## due dates formatted for html
-percents_html <- sapply(lapply(percents, paste, "<br>", collapse = ""), c)
-names(percents_html) <- NULL
-```
+The majority of the Digenea are equipped with two muscular suckers. The largest of these, the acetabulum (ventral sucker), is located on the ventral surface of the worm and serves as an attachment structure. The oral sucker surrounds the mouth and is located at the anterior end of the worm. Most digenes are less than 30 mm in length and many species are less than 3 mm. On the other hand, Hirudinella, a species found in the stomach of some marine fish species, may attain the length and girth of a summer squash.  Here's a video of an adult Hirudinella marina, which Chelsea dissected from the stomach of a pelagic wahoo (please forgive the way the camera moves and the noise in the background - this video was taken on a sailing research vessel on the high seas!):
 
-```{r generate_table, echo=FALSE}
-## due dates
-due_date <- sub("0(\\d)", "\\1", format(mon[1:9] + 7, "%d %b"))
-due_date[c(3,7)] <- " "
-due_date[9] <- "17 Mar"
-## data frame with dates & topics
-syl_txt <- data.frame(
-  assign_date = qtr,
-  topics = topics_html,
-  percents = percents_html,
-  assignment_links = assignment_links_html,
-  due_date = due_date
-  # template_links = template_links_html,
-  # key_links = key_links_html
-)
-colnames(syl_txt) <- c("Date", "Topic", "Grade", "Instructions", "Due")
-rownames(syl_txt) <- NULL
+https://www.youtube.com/watch?v=q8MpczbOYUE&embeds_referring_euri=https%3A%2F%2Fcanvas.uw.edu%2Fcourses%2F1479012%2Fpages%2Flab-1-overview-part-1-flatworms-and-the-trematode-life-cycle%3Fmodule_item_id%3D13387537&source_ve_path=MzY4NDIsMjg2NjY
 
-## generate table
-kable(syl_txt, format = "html", caption = " ",
-      align = "clccc", escape = FALSE) %>%
-  kable_styling(bootstrap_options = "striped",
-                full_width = FALSE,
-                position = "left") %>%
-  column_spec(1, width = "7em") %>%
-  column_spec(2, width = "18em") %>%
-  column_spec(c(3, 4, 5), width = "8em")
-```
+The ordinal name, Digenea, refers to the fact that the life cycle of these flatworms involves an alternation of hosts, with asexual reproduction occurring in intermediate hosts. As many as three intermediate hosts and a single definitive host may be required to complete a digenetic trematode life cycle. The first intermediate host is typically a gastropod (snail). The definitive host is always a vertebrate. Asexual reproduction in parasites may occur in intermediate hosts; sexual reproduction (cross-fertilization of the hermaphroditic worms) occurs only in the definitive host.
 
+Adult digenetic trematodes (known as “flukes” in the common vernacular) are typically found in the digestive tract and associated viscera of definitive hosts but may be found in almost any organ or tissue. The vertebrate definitive hosts typically have high vagility (i.e., they move across long distances), which facilitates the distribution of parasite eggs. All vertebrate classes serve as hosts to these parasites. Digenetic trematodes are economically and medically significant, as some species cause serious pathology in domestic animals and humans.
+
+The digenetic trematodes have some of the most complicated life histories in the animal kingdom. Digenetic trematode life cycles are “indirect” or “complex”, meaning that more than one host species is required to complete the life cycle. All species have asexually and sexually reproducing life states and a minimum of two hosts: a **first intermediate host** and a **definitive host**. Many taxa incorporate a second or third intermediate host as well.  Although this may, at first, seem confusing, there are really two basic variations to the theme as follows:
+
+1. Taxa that have an intermediate host (usually a snail) and a definitive host (vertebrate) only.
+2. Taxa that incorporate additional intermediate hosts (which may be mollusks, annelids, arthropods, or vertebrates) between the first intermediate and definitive hosts.
+
+<p align="center">
+    <img src="images/trematode_lc.png">
+</p>
+
+Asexual reproduction occurs in the intermediate host. Sexual reproduction, resulting in the production of eggs, occurs only in the definitive host. There are three distinct larval stages involved in all digenetic trematode life cycles: the **miracidium**, **sporocyst**, and **cercaria**. Some taxa also produce **rediae** and/or encysted **metacercariae**. All of these life stages except for the miracidium can be found in first intermediate hosts. One of the many interesting aspects of digenetic trematode parasite life cycles is the parasitic castration of the first intermediate host. Parasitic castration is the elimination of reproductive capability in the host, and results from consumption of and interference with the gonad tissue by larval digenetic trematode parasites. The castrated host continues to live and compete with uninfected individuals in the host population, but only produces larval parasites.
+
+**Miracidium:** The miracidium is the larval stage that develops within the egg produced by the adult fluke in the definitive host. After hatching from the egg, miracidia are infective to the first intermediate host. The miracidium is a minute, ovoid, aquatic, motile stage covered with cilia. These cilia are shed when infection is initiated by penetration of the host or consumption of embyronated eggs by an appropriate host. In the video below, you will see a miracidium (of the trematode species Fasciola hepatica) hatching out of its egg, using its cilia to swim away, and leaving behind an empty eggshell:
+
+Asexual reproduction occurs in the intermediate host. Sexual reproduction, resulting in the production of eggs, occurs only in the definitive host. There are three distinct larval stages involved in all digenetic trematode life cycles: the miracidium, sporocyst, and cercaria. Some taxa also produce rediae and/or encysted metacercariae. All of these life stages except for the miracidium can be found in first intermediate hosts. One of the many interesting aspects of digenetic trematode parasite life cycles is the parasitic castration of the first intermediate host. Parasitic castration is the elimination of reproductive capability in the host, and results from consumption of and interference with the gonad tissue by larval digenetic trematode parasites. The castrated host continues to live and compete with uninfected individuals in the host population, but only produces larval parasites.
+
+Miracidium: The miracidium is the larval stage that develops within the egg produced by the adult fluke in the definitive host. After hatching from the egg, miracidia are infective to the first intermediate host. The miracidium is a minute, ovoid, aquatic, motile stage covered with cilia. These cilia are shed when infection is initiated by penetration of the host or consumption of embyronated eggs by an appropriate host. In the video below, you will see a miracidium (of the trematode species Fasciola hepatica) hatching out of its egg, using its cilia to swim away, and leaving behind an empty eggshell:
+
+Asexual reproduction occurs in the intermediate host. Sexual reproduction, resulting in the production of eggs, occurs only in the definitive host. There are three distinct larval stages involved in all digenetic trematode life cycles: the miracidium, sporocyst, and cercaria. Some taxa also produce rediae and/or encysted metacercariae. All of these life stages except for the miracidium can be found in first intermediate hosts. One of the many interesting aspects of digenetic trematode parasite life cycles is the parasitic castration of the first intermediate host. Parasitic castration is the elimination of reproductive capability in the host, and results from consumption of and interference with the gonad tissue by larval digenetic trematode parasites. The castrated host continues to live and compete with uninfected individuals in the host population, but only produces larval parasites.
+
+Miracidium: The miracidium is the larval stage that develops within the egg produced by the adult fluke in the definitive host. After hatching from the egg, miracidia are infective to the first intermediate host. The miracidium is a minute, ovoid, aquatic, motile stage covered with cilia. These cilia are shed when infection is initiated by penetration of the host or consumption of embyronated eggs by an appropriate host. In the video below, you will see a miracidium (of the trematode species Fasciola hepatica) hatching out of its egg, using its cilia to swim away, and leaving behind an empty eggshell:
+
+https://youtu.be/78u7YKKPEKY
+
+**Sporocyst:** Infection of the first intermediate hosts begins when the miracidium enters that host and becomes a primary or “mother” sporocyst. The primary sporocyst gives rise to a second generation asexually; the second generation may be daughter sporocysts or rediae. Embryos within the daughter sporocysts may produce another generation of sporocysts, rediae, or cercariae. Sporocysts are “sack-like” organisms with no mouth or digestive system. The sporocyst absorbs nutrients directly from host tissue to supply the developing larvae. 
+
+**Rediae:** SOME groups of digeneans produce rediae. Rediae have a rudimentary digestive system consisting of a mouth, muscular pharynx, and short, unbranched gut; this larval stage may be distinguished from a sporocyst based on the presence of these structures. Rediae can be quite active and even downright aggressive, feeding actively on host tissue and sometimes upon other larval trematodes within the host. Note that not all digenean trematodes possess a redia stage – some only produce sporocysts.
+
+**Cercariae:** Cercariae are asexually produced by sporocysts or rediae, depending on the species of trematode. Cercariae are free-swimming, sperm-like creatures that encyst in or penetrate the next host. Three different scenarios are possible:
+
+1. Penetration of a second intermediate host and development of an encysted stage (metacercaria) in that host.
+2. Penetration of the definitive (vertebrate) host and development of the adult fluke in that host.
+3. Encysting on a suitable substrate in the environment or on the outside of an intermediate host.
+
+In the video below, you can see cercariae spilling out of burst sporocysts dissected from a snail intermediate host (note that you can see the ventral suckers clear as day on each cercaria!):
+
+https://youtu.be/d3wced1DQd4
+
+**Metacercariae:** The metacercaria is an encysted larval stage that occurs in many digenean life cycles. Metacercariae are infective to the definitive host in the life cycle. Infection of the definitive host by a metacercaria is always trophic: the definitive host consumes the metacercariae in an infected intermediate host or on food items. Metacercaria can develop in both invertebrate and vertebrate hosts and on invertebrates. The developing fluke may be visible inside of the cyst (as in the illustration below):
+
+<p align="center">
+    <img src="images/metacercaria.jpg">
+</p>
+
+Having trouble keeping track of the trematode life cycle?  *The Oatmeal* is here to help! [This cartoon](https://theoatmeal.com/comics/captain_higgins) illustrates the three-host life cycle of one trematode (*Dicrocoelium dendriticum*) in a... memorable... way.
+
+<br>
+
+#### Order Strigeiformes
+
+The Order Strigeiformes is pretty unique among the trematodes: instead of a three-host life cycle, the Srigeiformes use only two hosts (a first intermediate snail and a vertebrate definitive host). The Order Srigeiformes includes those digene species whose cercariae have forked tails. The cercariae also possess specialized glands for penetration of the hosts. The digenetic trematodes in the Superfamily Schistosomatoidea are usually **dioecious**, having separate male and female worms. The schistosomes are our representative material for this order, but they are **unusual in many ways and highly adapted for parasitism**. Adult worms live permanently in copula within the host.
+
+<p align="center">
+    <img src="images/schistosome_lc.jpg">
+</p>
+
+Schistosomes are long, thin worms, an adaptation to living in the small blood vessels of the mammalian hepatic portal system. The **oral sucker** and **acetabulum** are adjacent in these worms. The male is recognized by the presence of the **gynecophoric canal**, a deep groove on the ventral surface that holds the female worm. The testis is also usually visible in stained specimens. The **genital pore** is just posterior to the acetabulum in the female worm. Lateral **vitellaria** occupy the posterior half of the body and the compact ovary is previtelline. The digestive **caecae** are usually visible as dark coiled tubes. What are these worms eating?
+
+<p align="center">
+    <img src="images/Sm_in_copula.jpeg">
+    <em>Image from Boissier et al. 2019</em>
+</p>
+
+### Lab 2
+
+### Lab 3
+
+### Lab 4
+
+### Lab 5
+
+### Lab 6
+
+### Lab 7
+
+### Lab 8
+
+### Lab 9
+
+<br>
